--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>docker nginx demo</title>
     </head>
     <body>
-        <h1>hello world from github ci/cd!</h1>
+        <h1>hello world!</h1>
     </body>
 </html>
