--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
         <title>docker nginx demo</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1><bold>Hello World!</bold></h1>
+        <p>IMAGE TAG: %%IMAGE_TAG%%</p>
     </body>
 </html>
