change tag formatting in html

--- a/template.html
+++ b/template.html
@@ -1,9 +1,15 @@
 <html>
+    <style>
+        p {
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 18px;
+        }
+    </style>
     <head>
         <title>docker nginx demo</title>
     </head>
     <body>
         <h1><bold>Hello World!</bold></h1>
-        <p>IMAGE TAG: %%IMAGE_TAG%%</p>
+        <p>%%IMAGE_TAG%%</p>
     </body>
 </html>
