updated html title

--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
         }
     </style>
     <head>
-        <title>docker nginx demo</title>
+        <title>CI/CD Demo Page</title>
     </head>
     <body>
         <h1><bold>Hello World!</bold></h1>
