--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
         <title>CI/CD Demo Page</title>
     </head>
     <body>
-        <h1><bold>Hello World!</bold></h1>
+        <h1><bold>Hello World from Github CI/CD and Kubernetes!</bold></h1>
         <p>%%IMAGE_TAG%%</p>
     </body>
 </html>
